--- a/index.html
+++ b/index.html
@@ -102,6 +102,53 @@
       opacity: 0.7; /* Slightly visible */
     }
 
+    /* Hero Text Color Animation - Spicy JERK */
+    .jerk-animate {
+      background: linear-gradient(90deg, var(--accent), #ff6b35, #f7931e, var(--accent));
+      background-size: 300% 100%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      animation: spicyGradient 3s ease infinite;
+    }
+
+    @keyframes spicyGradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* Fire Glow Effect */
+    .fire-glow {
+      animation: fireGlow 1.5s ease-in-out infinite alternate;
+    }
+
+    @keyframes fireGlow {
+      0% {
+        text-shadow: 
+          0 0 10px rgba(200, 255, 0, 0.5),
+          0 0 20px rgba(200, 255, 0, 0.3),
+          0 0 40px rgba(255, 107, 53, 0.3);
+      }
+      100% {
+        text-shadow: 
+          0 0 20px rgba(200, 255, 0, 0.8),
+          0 0 40px rgba(200, 255, 0, 0.5),
+          0 0 60px rgba(255, 107, 53, 0.5),
+          0 0 80px rgba(247, 147, 30, 0.3);
+      }
+    }
+
+    /* Pulsing Heat Waves */
+    .heat-pulse {
+      animation: heatPulse 0.8s ease-in-out infinite;
+    }
+
+    @keyframes heatPulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.02); }
+    }
+
     /* Kinetic Hero Animation */
     .hero-text span {
       display: inline-block;
@@ -111,6 +158,21 @@
     }
 
     @keyframes slideIn {
+      to {
+        opacity: 1;
+        transform: translateY(0) rotate(0);
+      }
+    }
+
+    /* JERK letter-by-letter fire animation */
+    .jerk-letter {
+      display: inline-block;
+      opacity: 0;
+      transform: translateY(100px) rotate(10deg);
+      animation: jerkSlideIn 1s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    }
+
+    @keyframes jerkSlideIn {
       to {
         opacity: 1;
         transform: translateY(0) rotate(0);
@@ -300,8 +362,8 @@
         <h1 class="font-display text-7xl sm:text-[12rem] leading-none tracking-tight hero-text text-white mix-blend-difference">
           <span style="animation-delay: 0.1s">T</span><span style="animation-delay: 0.15s">H</span><span style="animation-delay: 0.2s">E</span>
           <span class="text-[var(--accent)]" style="animation-delay: 0.25s"> </span>
-          <span style="animation-delay: 0.3s">J</span><span style="animation-delay: 0.35s">E</span><span style="animation-delay: 0.4s">R</span><span style="animation-delay: 0.45s">K</span>
-          <span class="text-[var(--accent)]" style="animation-delay: 0.5s"> </span>
+          <span class="jerk-letter jerk-animate fire-glow" style="animation-delay: 0.3s">J</span><span class="jerk-letter jerk-animate fire-glow" style="animation-delay: 0.35s">E</span><span class="jerk-letter jerk-animate fire-glow" style="animation-delay: 0.4s">R</span><span class="jerk-letter jerk-animate fire-glow" style="animation-delay: 0.45s">K</span>
+          <span class="text-[var(--accent)] heat-pulse" style="animation-delay: 0.5s"> </span>
           <span style="animation-delay: 0.55s">H</span><span style="animation-delay: 0.6s">U</span><span style="animation-delay: 0.65s">T</span>
         </h1>
       </div>
