Update Vimeo embed with correct parameters from embed code

--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@
     <div class="hero-video-container" id="video-container">
         <!-- Vimeo Embed with autoplay parameters -->
         <iframe
-          src="https://player.vimeo.com/video/1164907799?autoplay=1&loop=1&autopause=0&muted=1&background=1&dnt=1&playsinline=1"
+          src="https://player.vimeo.com/video/1164907799?badge=0&autopause=0&autoplay=1&loop=1&muted=1&background=1&player_id=0&app_id=58479"
           frameborder="0"
-          allow="autoplay; fullscreen; picture-in-picture"
+          allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen
-          playsinline
           id="hero-video">
         </iframe>
     </div>
