--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: -1;
+      z-index: 0;
       overflow: hidden;
       pointer-events: none;
-      background-color: #000; /* Fallback bg */
+      background-image: url('https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+      background-size: cover;
+      background-position: center;
     }
 
     .hero-video-container iframe {
@@ -99,7 +101,6 @@
       min-height: 100vh;
       min-width: 177.77vh; /* 16:9 Aspect Ratio */
       transform: translate(-50%, -50%);
-      opacity: 0.7; /* Slightly visible */
     }
 
     /* Hero Text Color Animation - Spicy JERK */
