--- a/index.html
+++ b/index.html
@@ -84,23 +84,18 @@
       left: 0;
       width: 100%;
       height: 100%;
+      padding: 56.25% 0 0 0;
       z-index: 0;
       overflow: hidden;
-      background-image: url('https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
-      background-size: cover;
-      background-position: center;
+      background: #000;
     }
 
     .hero-video-container iframe {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 100vw;
-      height: 56.25vw; /* 16:9 Aspect Ratio */
-      min-height: 100vh;
-      min-width: 177.77vh; /* 16:9 Aspect Ratio */
-      transform: translate(-50%, -50%);
-      visibility: visible;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
 
     /* Hero Text Color Animation - Spicy JERK */
@@ -340,7 +335,6 @@
   <section class="relative h-screen flex items-center justify-center overflow-hidden">
     <!-- Video Background Container -->
     <div class="hero-video-container" id="video-container">
-        <!-- Vimeo Embed with autoplay parameters -->
         <iframe
           src="https://player.vimeo.com/video/1164907799?badge=0&autopause=0&autoplay=1&loop=1&muted=1&background=1&player_id=0&app_id=58479"
           frameborder="0"
