--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
       left: 0;
       width: 100%;
       height: 100%;
-      padding: 56.25% 0 0 0;
       z-index: 0;
       overflow: hidden;
       background: #000;
@@ -93,10 +92,23 @@
 
     .hero-video-container iframe {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 50%;
+      left: 50%;
+      width: 100vw;
+      height: 56.25vw;
+      min-height: 100vh;
+      min-width: 177.77vh;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+    }
+
+    @media (max-aspect-ratio: 16/9) {
+      .hero-video-container iframe {
+        width: 100vw;
+        height: 100vh;
+        min-height: unset;
+        min-width: unset;
+      }
     }
 
     /* Hero Text Color Animation - Spicy JERK */
