--- a/index.html
+++ b/index.html
@@ -88,27 +88,17 @@
       z-index: 0;
       overflow: hidden;
       background: #000;
+      border: 2px solid red; /* Debug - remove after confirming visibility */
     }
 
     .hero-video-container iframe {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 100vw;
-      height: 56.25vw;
-      min-height: 100vh;
-      min-width: 177.77vh;
-      transform: translate(-50%, -50%);
-      pointer-events: none;
-    }
-
-    @media (max-aspect-ratio: 16/9) {
-      .hero-video-container iframe {
-        width: 100vw;
-        height: 100vh;
-        min-height: unset;
-        min-width: unset;
-      }
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      opacity: 1 !important;
     }
 
     /* Hero Text Color Animation - Spicy JERK */
