Add blue border to hero section

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative h-screen flex items-center justify-center overflow-hidden">
+  <section class="relative h-screen flex items-center justify-center overflow-hidden" style="border: 5px solid blue;">
     <!-- Video Background Container -->
     <div class="hero-video-container" id="video-container">
         <iframe
