--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       z-index: 0;
       overflow: hidden;
       background: #000;
-      border: 2px solid red; /* Debug - remove after confirming visibility */
+      border: 2px solid red;
     }
 
     .hero-video-container iframe {
@@ -98,7 +98,6 @@
       width: 100%;
       height: 100%;
       border: none;
-      opacity: 1 !important;
     }
 
     /* Hero Text Color Animation - Spicy JERK */
