Try position fixed for video container

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     /* Hero Video Background Styles */
     .hero-video-container {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
