--- a/index.html
+++ b/index.html
@@ -80,15 +80,14 @@
 
     /* Hero Video Background Styles */
     .hero-video-container {
-      position: fixed;
+      position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100vh;
-      z-index: 0;
+      height: 100%;
+      z-index: 1;
       overflow: hidden;
       background: #000;
-      border: 2px solid red;
     }
 
     .hero-video-container iframe {
@@ -334,7 +333,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative h-screen flex items-center justify-center overflow-hidden" style="border: 5px solid blue;">
+  <section class="relative h-screen flex items-center justify-center overflow-hidden">
     <!-- Video Background Container -->
     <div class="hero-video-container" id="video-container">
         <iframe
@@ -348,10 +347,10 @@
     </div>
     
     <!-- Overlays for readability -->
-    <div class="absolute inset-0 z-[1] bg-gradient-to-t from-[var(--bg)] via-[var(--bg)]/60 to-[var(--bg)]"></div>
-    <div class="absolute inset-0 z-[1] bg-gradient-to-b from-[var(--bg)]/80 via-transparent to-transparent"></div>
+    <div class="absolute inset-0 z-10 bg-gradient-to-t from-[var(--bg)] via-[var(--bg)]/60 to-[var(--bg)]"></div>
+    <div class="absolute inset-0 z-10 bg-gradient-to-b from-[var(--bg)]/80 via-transparent to-transparent"></div>
 
-    <div class="relative z-10 text-center px-6">
+    <div class="relative z-20 text-center px-6">
       <div class="overflow-hidden mb-4">
         <h1 class="font-display text-7xl sm:text-[12rem] leading-none tracking-tight hero-text text-white mix-blend-difference">
           <span style="animation-delay: 0.1s">T</span><span style="animation-delay: 0.15s">H</span><span style="animation-delay: 0.2s">E</span>
