--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
     </div>
     
     <!-- Overlays for readability -->
-    <div class="absolute inset-0 z-10 bg-gradient-to-t from-[var(--bg)] via-[var(--bg)]/60 to-[var(--bg)]"></div>
-    <div class="absolute inset-0 z-10 bg-gradient-to-b from-[var(--bg)]/80 via-transparent to-transparent"></div>
+    <div class="absolute inset-0 z-10 bg-gradient-to-t from-[var(--bg)] via-[var(--bg)]/30 to-transparent"></div>
+    <div class="absolute inset-0 z-10 bg-gradient-to-b from-[var(--bg)]/30 via-transparent to-transparent"></div>
 
     <div class="relative z-20 text-center px-6">
       <div class="overflow-hidden mb-4">
