Fix hero video being covered by nav bar

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative h-screen flex items-center justify-center overflow-hidden">
+  <section class="relative h-screen flex items-center justify-center overflow-hidden pt-28 md:pt-40">
     <!-- Video Background Container -->
     <div class="hero-video-container" id="video-container">
         <iframe
