Fix: Add margin to hero video container to prevent nav bar overlap

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
   <!-- Hero Section -->
   <section class="relative h-screen flex items-center justify-center overflow-hidden pt-28 md:pt-40">
     <!-- Video Background Container -->
-    <div class="hero-video-container" id="video-container">
+    <div class="hero-video-container mt-28 md:mt-40" id="video-container">
         <iframe
           src="https://player.vimeo.com/video/1164907799?badge=0&autopause=0&autoplay=1&loop=1&muted=1&background=1&player_id=0&app_id=58479"
           frameborder="0"
