--- a/index.html
+++ b/index.html
@@ -85,9 +85,16 @@
       left: 0;
       width: 100%;
       height: 100%;
+      margin-top: -80px;
       z-index: 1;
       overflow: hidden;
       background: #000;
+    }
+
+    @media (min-width: 768px) {
+      .hero-video-container {
+        margin-top: -120px;
+      }
     }
 
     .hero-video-container iframe {
@@ -333,9 +340,9 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative h-screen flex items-center justify-center overflow-hidden pt-28 md:pt-40">
+  <section class="relative h-screen flex items-center justify-center overflow-hidden">
     <!-- Video Background Container -->
-    <div class="hero-video-container mt-28 md:mt-40" id="video-container">
+    <div class="hero-video-container w-full" id="video-container">
         <iframe
           src="https://player.vimeo.com/video/1164907799?badge=0&autopause=0&autoplay=1&loop=1&muted=1&background=1&player_id=0&app_id=58479"
           frameborder="0"
