--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
         <img src="https://iili.io/qH6ulcP.png" alt="The Jerk Hut Logo" class="h-28 md:h-40 w-auto object-contain">
       </a>
       <div class="hidden md:flex items-center gap-12">
+        <a href="#" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">HOME</a>
         <a href="#menu" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">MENU</a>
         <a href="#story" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">STORY</a>
         <a href="#location" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">LOCATION</a>
