Update logo to new image URL

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <div class="max-w-7xl mx-auto px-6 py-5 flex items-center justify-between">
       <!-- LARGE LOGO -->
       <a href="#" class="glitch-hover">
-        <img src="https://iili.io/qH6ulcP.png" alt="The Jerk Hut Logo" class="h-20 md:h-28 w-auto object-contain">
+        <img src="https://freeimage.host/i/qHsZbY7" alt="The Jerk Hut Logo" class="h-20 md:h-28 w-auto object-contain">
       </a>
       <div class="hidden md:flex items-center gap-12">
         <a href="#" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">HOME</a>
