--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative h-screen flex items-center justify-center overflow-hidden pt-24 md:pt-32">
+  <section class="relative h-[85vh] flex items-center justify-center overflow-hidden pt-24 md:pt-32">
     <!-- Video Background Container -->
     <div class="hero-video-container" id="video-container">
         <iframe
