Balance nav with ORDER item and reduce gap between items

--- a/index.html
+++ b/index.html
@@ -314,10 +314,11 @@
    <nav class="fixed top-0 left-0 right-0 z-50 border-b border-white/5 bg-[var(--bg)]">
      <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
        <!-- Left Menu -->
-       <div class="hidden md:flex items-center gap-6">
+       <div class="hidden md:flex items-center gap-4">
          <a href="#" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">HOME</a>
          <a href="#menu" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">MENU</a>
          <a href="#story" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">STORY</a>
+          <a href="#order" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">ORDER</a>
        </div>
        
        <!-- Centered Logo -->
@@ -326,7 +327,7 @@
        </a>
        
        <!-- Right Menu -->
-       <div class="hidden md:flex items-center gap-6">
+       <div class="hidden md:flex items-center gap-4">
          <a href="#location" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">LOCATION</a>
          <a href="#careers" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">CAREERS</a>
          <a href="#franchise" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">FRANCHISE</a>
@@ -405,7 +406,7 @@
   <!-- Menu Section -->
   <section id="menu" class="py-32 relative">
     <div class="max-w-7xl mx-auto px-6">
-      <div class="flex flex-col md:flex-row justify-between items-start md:items-end mb-16 gap-6">
+      <div class="flex flex-col md:flex-row justify-between items-start md:items-end mb-16 gap-4">
         <div class="reveal">
           <span class="text-[var(--accent)] font-mono text-sm tracking-widest mb-2 block">01 // MENU</span>
           <h2 class="font-display text-6xl md:text-8xl tracking-wide text-white">SIGNATURE<br/>DISHES</h2>
