Add mobile-specific hero video (Vimeo 1164916559)

--- a/index.html
+++ b/index.html
@@ -359,6 +359,18 @@
         </iframe>
     </div>
     
+    <!-- Mobile Video Background -->
+    <div class="hero-video-container md:hidden" id="video-container-mobile">
+        <iframe
+          src="https://player.vimeo.com/video/1164916559?badge=0&autopause=0&autoplay=1&loop=1&muted=1&background=1&player_id=0&app_id=58479"
+          frameborder="0"
+          allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+          id="hero-video-mobile">
+        </iframe>
+    </div>
+    
     <!-- Overlays for readability -->
     <div class="absolute inset-0 z-10 bg-gradient-to-t from-[var(--bg)] via-[var(--bg)]/30 to-transparent"></div>
     <div class="absolute inset-0 z-10 bg-gradient-to-b from-[var(--bg)]/30 via-transparent to-transparent"></div>
