--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
   </div>
 
   <!-- Menu Section -->
-  <section id="menu" class="py-32 relative">
+  <section id="menu" class="py-16 md:py-24 relative">
     <div class="max-w-7xl mx-auto px-6">
       <div class="flex flex-col md:flex-row justify-between items-start md:items-end mb-16 gap-4">
         <div class="reveal">
@@ -432,7 +432,7 @@
         <div class="tilt-card reveal group" data-tilt>
           <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
             <div class="h-64 overflow-hidden relative">
-              <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+              <img src="https://images.unsplash.com/photo-1601050690597-df0568f70950?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
                    class="w-full h-full object-cover img-filter">
               <span class="absolute top-4 right-4 bg-white text-black text-xs font-bold px-3 py-1">BEST SELLER</span>
             </div>
@@ -460,7 +460,7 @@
         <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.1s">
           <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
             <div class="h-64 overflow-hidden relative">
-              <img src="https://images.unsplash.com/photo-1544025162-d76694265947?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+              <img src="https://images.unsplash.com/photo-1547592180-85f173990554?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
                    class="w-full h-full object-cover img-filter">
             </div>
             <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
@@ -487,7 +487,7 @@
         <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.2s">
           <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
             <div class="h-64 overflow-hidden relative">
-              <img src="https://images.unsplash.com/photo-1565557623262-b51c2513a641?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+              <img src="https://images.unsplash.com/photo-1603360946369-dc9bb6f54262?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
                    class="w-full h-full object-cover img-filter">
               <span class="absolute top-4 right-4 bg-[var(--accent)] text-black text-xs font-bold px-3 py-1">SPICY</span>
             </div>
