--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
   <div class="cursor-follower"></div>
 
    <!-- Navigation -->
-   <nav class="fixed top-0 left-0 right-0 z-50 border-b border-white/5 bg-[var(--bg)]">
+   <nav id="main-nav" class="fixed top-0 left-0 right-0 z-[60] border-b border-transparent bg-transparent transition-all duration-300">
      <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
        <!-- Left Menu -->
        <div class="hidden md:flex items-center gap-4">
