--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
     /* Hero Video Background Styles */
     .hero-video-container {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       z-index: 1;
       overflow: hidden;
       background: #000;
@@ -92,11 +92,13 @@
 
     .hero-video-container iframe {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100vw;
+      height: 100vh;
       border: none;
+      object-fit: cover;
     }
 
     /* Hero Text Color Animation - Spicy JERK */
