--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
     /* Hero Video Background Styles */
     .hero-video-container {
-      position: fixed;
+      position: absolute;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       z-index: 1;
       overflow: hidden;
       background: #000;
@@ -95,10 +95,11 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
+      min-width: 100vw;
+      min-height: 100vh;
       border: none;
-      object-fit: cover;
     }
 
     /* Hero Text Color Animation - Spicy JERK */
