Update jerk chicken image with new photo

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         <div class="tilt-card reveal group" data-tilt>
           <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
             <div class="h-64 overflow-hidden relative">
-              <img src="https://images.unsplash.com/photo-1601050690597-df0568f70950?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+              <img src="https://iili.io/qHZfqhv.md.webp" 
                    class="w-full h-full object-cover img-filter">
               <span class="absolute top-4 right-4 bg-white text-black text-xs font-bold px-3 py-1">BEST SELLER</span>
             </div>
