--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.1s">
           <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
             <div class="h-64 overflow-hidden relative">
-              <img src="https://images.unsplash.com/photo-1547592180-85f173990554?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+              <img src="https://iili.io/qHZBEmu.md.png" 
                    class="w-full h-full object-cover img-filter">
             </div>
             <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
