--- a/index.html
+++ b/index.html
@@ -514,6 +514,34 @@
           </div>
         </div>
 
+        <!-- Card 4 - JERK SHRIMP -->
+        <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.3s">
+          <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
+            <div class="h-64 overflow-hidden relative">
+              <img src="https://iili.io/qHZn1ob.md.png" 
+                   class="w-full h-full object-cover img-filter">
+              <span class="absolute top-4 right-4 bg-white text-black text-xs font-bold px-3 py-1">POPULAR</span>
+            </div>
+            <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
+              <div class="flex justify-between items-start mb-4">
+                <h3 class="font-display text-3xl text-white">JERK SHRIMP</h3>
+                <span class="text-[var(--accent)] text-2xl font-bold">$22</span>
+              </div>
+              <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Fresh jumbo shrimp marinated in jerk spices and grilled to perfection.</p>
+              <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
+                <div class="flex gap-1">
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-gray-600"></div>
+                </div>
+                <button class="text-xs tracking-widest text-[var(--accent)] hover:text-white transition-colors border-b border-[var(--accent)]">ADD TO ORDER</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
