--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
   </section>
 
   <!-- Marquee Banner -->
-  <div class="bg-[var(--accent)] text-[var(--bg)] py-4 border-y border-black overflow-hidden">
+  <div class="bg-[var(--accent)] text-[var(--bg)] py-4 border-y border-black overflow-hidden mt-16 md:mt-24">
     <div class="marquee">
       <div class="marquee-content font-display text-2xl tracking-widest">
         SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • 
