Position green ticker bar at bottom of hero with small gap

--- a/index.html
+++ b/index.html
@@ -402,21 +402,21 @@
     </div>
 
     <!-- Scroll Indicator -->
-    <div class="absolute bottom-10 left-1/2 -translate-x-1/2 text-[var(--accent)] animate-bounce">
+    <div class="absolute bottom-10 left-1/2 -translate-x-1/2 text-[var(--accent)] animate-bounce z-20">
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M12 5v14M19 12l-7 7-7-7"/>
       </svg>
     </div>
-  </section>
 
-  <!-- Marquee Banner -->
-  <div class="bg-[var(--accent)] text-[var(--bg)] py-4 border-y border-black overflow-hidden mt-16 md:mt-24">
-    <div class="marquee">
-      <div class="marquee-content font-display text-2xl tracking-widest">
-        SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • 
+    <!-- Marquee Banner - positioned at bottom of hero -->
+    <div class="absolute bottom-6 left-0 right-0 z-20 bg-[var(--accent)] text-[var(--bg)] py-3 border-y border-black overflow-hidden">
+      <div class="marquee">
+        <div class="marquee-content font-display text-xl md:text-2xl tracking-widest">
+          SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES •
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 
   <!-- Menu Section -->
   <section id="menu" class="py-16 md:py-24 relative">
