Move ticker bar below hero section with slight overlap

--- a/index.html
+++ b/index.html
@@ -407,16 +407,16 @@
         <path d="M12 5v14M19 12l-7 7-7-7"/>
       </svg>
     </div>
+  </section>
 
-    <!-- Marquee Banner - positioned at bottom of hero -->
-    <div class="absolute bottom-0 left-0 right-0 z-20 bg-[var(--accent)] text-[var(--bg)] py-3 border-y border-black overflow-hidden">
-      <div class="marquee">
-        <div class="marquee-content font-display text-xl md:text-2xl tracking-widest">
-          SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES •
-        </div>
+  <!-- Marquee Banner - positioned below hero -->
+  <div class="bg-[var(--accent)] text-[var(--bg)] py-3 border-y border-black overflow-hidden -mt-8 relative z-10">
+    <div class="marquee">
+      <div class="marquee-content font-display text-xl md:text-2xl tracking-widest">
+        SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES •
       </div>
     </div>
-  </section>
+  </div>
 
   <!-- Menu Section -->
   <section id="menu" class="py-16 md:py-24 relative">
