Move ticker bar further down below hero

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
   </section>
 
   <!-- Marquee Banner - positioned below hero -->
-  <div class="bg-[var(--accent)] text-[var(--bg)] py-3 border-y border-black overflow-hidden -mt-8 relative z-10">
+  <div class="bg-[var(--accent)] text-[var(--bg)] py-3 border-y border-black overflow-hidden mt-4 relative z-10">
     <div class="marquee">
       <div class="marquee-content font-display text-xl md:text-2xl tracking-widest">
         SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES • SPICY • AUTHENTIC • FIRE • PIMENTO • KINGSTON • VIBES •
