Center the SIGNATURE DISHES section heading and description

--- a/index.html
+++ b/index.html
@@ -421,12 +421,12 @@
   <!-- Menu Section -->
   <section id="menu" class="py-16 md:py-24 relative">
     <div class="max-w-7xl mx-auto px-6">
-      <div class="flex flex-col md:flex-row justify-between items-start md:items-end mb-16 gap-4">
+      <div class="text-center mb-16">
         <div class="reveal">
           <span class="text-[var(--accent)] font-mono text-sm tracking-widest mb-2 block">01 // MENU</span>
           <h2 class="font-display text-6xl md:text-8xl tracking-wide text-white">SIGNATURE<br/>DISHES</h2>
         </div>
-        <p class="text-[var(--muted)] max-w-md reveal">Authentic recipes passed down through generations, cooked over real pimento wood.</p>
+        <p class="text-[var(--muted)] max-w-md mx-auto mt-4 reveal">Authentic recipes passed down through generations, cooked over real pimento wood.</p>
       </div>
 
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
