--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         </div>
 
         <!-- Card 3 - JERK SHRIMP -->
-        <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.3s">
+        <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.2s">
           <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
             <div class="h-64 overflow-hidden relative">
               <img src="https://iili.io/qHZn1ob.md.png" 
@@ -500,6 +500,62 @@
                 <span class="text-[var(--accent)] text-2xl font-bold">$22</span>
               </div>
               <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Fresh jumbo shrimp marinated in jerk spices and grilled to perfection.</p>
+              <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
+                <div class="flex gap-1">
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-gray-600"></div>
+                </div>
+                <button class="text-xs tracking-widest text-[var(--accent)] hover:text-white transition-colors border-b border-[var(--accent)]">ADD TO ORDER</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 4 - RED SNAPPER -->
+        <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.3s">
+          <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
+            <div class="h-64 overflow-hidden relative">
+              <img src="https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+                   class="w-full h-full object-cover img-filter">
+              <span class="absolute top-4 right-4 bg-[var(--accent)] text-black text-xs font-bold px-3 py-1">FRESH</span>
+            </div>
+            <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
+              <div class="flex justify-between items-start mb-4">
+                <h3 class="font-display text-3xl text-white">JERK RED SNAPPER</h3>
+                <span class="text-[var(--accent)] text-2xl font-bold">$28</span>
+              </div>
+              <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Whole red snapper seasoned with traditional jerk spices and fire-grilled to flaky perfection.</p>
+              <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
+                <div class="flex gap-1">
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                </div>
+                <button class="text-xs tracking-widest text-[var(--accent)] hover:text-white transition-colors border-b border-[var(--accent)]">ADD TO ORDER</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 5 - LOBSTER -->
+        <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.4s">
+          <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
+            <div class="h-64 overflow-hidden relative">
+              <img src="https://images.unsplash.com/photo-1559737558-2f5a35f4523b?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+                   class="w-full h-full object-cover img-filter">
+              <span class="absolute top-4 right-4 bg-white text-black text-xs font-bold px-3 py-1">PREMIUM</span>
+            </div>
+            <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
+              <div class="flex justify-between items-start mb-4">
+                <h3 class="font-display text-3xl text-white">JERK LOBSTER</h3>
+                <span class="text-[var(--accent)] text-2xl font-bold">$38</span>
+              </div>
+              <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Caribbean spiny lobster tail brushed with garlic butter and jerk seasonings, flame-grilled.</p>
               <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
                 <div class="flex gap-1">
                   <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
