Add Stew Beef to menu

--- a/index.html
+++ b/index.html
@@ -570,6 +570,34 @@
           </div>
         </div>
 
+        <!-- Card 6 - STEW BEEF -->
+        <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.5s">
+          <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
+            <div class="h-64 overflow-hidden relative">
+              <img src="https://images.unsplash.com/photo-1547592166-23ac45744acd?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+                   class="w-full h-full object-cover img-filter">
+              <span class="absolute top-4 right-4 bg-[var(--accent)] text-black text-xs font-bold px-3 py-1">CLASSIC</span>
+            </div>
+            <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
+              <div class="flex justify-between items-start mb-4">
+                <h3 class="font-display text-3xl text-white">STEW BEEF</h3>
+                <span class="text-[var(--accent)] text-2xl font-bold">$22</span>
+              </div>
+              <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Tender beef chunks slow-simmered in a rich Jamaican-style stew with carrots, potatoes, and herbs.</p>
+              <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
+                <div class="flex gap-1">
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-gray-600"></div>
+                  <div class="w-2 h-2 rounded-full bg-gray-600"></div>
+                </div>
+                <button class="text-xs tracking-widest text-[var(--accent)] hover:text-white transition-colors border-b border-[var(--accent)]">ADD TO ORDER</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
