--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
         <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.3s">
           <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
             <div class="h-64 overflow-hidden relative">
-              <img src="https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+              <img src="https://iili.io/qJL5691.md.png" 
                    class="w-full h-full object-cover img-filter">
               <span class="absolute top-4 right-4 bg-[var(--accent)] text-black text-xs font-bold px-3 py-1">FRESH</span>
             </div>
