Update prices and add Salmon dish with & up indicators

--- a/index.html
+++ b/index.html
@@ -442,7 +442,8 @@
             <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
               <div class="flex justify-between items-start mb-4">
                 <h3 class="font-display text-3xl text-white">JERK CHICKEN</h3>
-                <span class="text-[var(--accent)] text-2xl font-bold">$18</span>
+                <span class="text-[var(--accent)] text-2xl font-bold">$12.50</span>
+                <span class="text-[var(--muted)] text-xs">& up</span>
               </div>
               <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Marinated 24 hours in our secret jerk sauce, grilled to perfection over pimento wood coals.</p>
               <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
@@ -469,7 +470,8 @@
             <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
               <div class="flex justify-between items-start mb-4">
                 <h3 class="font-display text-3xl text-white">OXTAIL STEW</h3>
-                <span class="text-[var(--accent)] text-2xl font-bold">$26</span>
+                <span class="text-[var(--accent)] text-2xl font-bold">$25</span>
+                <span class="text-[var(--muted)] text-xs">& up</span>
               </div>
               <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Slow-braised oxtail in a rich, savory gravy with broad beans and fresh herbs.</p>
               <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
@@ -497,7 +499,8 @@
             <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
               <div class="flex justify-between items-start mb-4">
                 <h3 class="font-display text-3xl text-white">JERK SHRIMP</h3>
-                <span class="text-[var(--accent)] text-2xl font-bold">$22</span>
+                <span class="text-[var(--accent)] text-2xl font-bold">$18</span>
+                <span class="text-[var(--muted)] text-xs">& up</span>
               </div>
               <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Fresh jumbo shrimp marinated in jerk spices and grilled to perfection.</p>
               <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
@@ -525,7 +528,8 @@
             <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
               <div class="flex justify-between items-start mb-4">
                 <h3 class="font-display text-3xl text-white">JERK RED SNAPPER</h3>
-                <span class="text-[var(--accent)] text-2xl font-bold">$28</span>
+                <span class="text-[var(--accent)] text-2xl font-bold">$25</span>
+                <span class="text-[var(--muted)] text-xs">& up</span>
               </div>
               <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Whole red snapper seasoned with traditional jerk spices and fire-grilled to flaky perfection.</p>
               <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
@@ -553,7 +557,8 @@
             <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
               <div class="flex justify-between items-start mb-4">
                 <h3 class="font-display text-3xl text-white">JERK LOBSTER</h3>
-                <span class="text-[var(--accent)] text-2xl font-bold">$38</span>
+                <span class="text-[var(--accent)] text-2xl font-bold">$37.50</span>
+                <span class="text-[var(--muted)] text-xs">& up</span>
               </div>
               <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Caribbean spiny lobster tail brushed with garlic butter and jerk seasonings, flame-grilled.</p>
               <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
@@ -581,7 +586,8 @@
             <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
               <div class="flex justify-between items-start mb-4">
                 <h3 class="font-display text-3xl text-white">STEW BEEF</h3>
-                <span class="text-[var(--accent)] text-2xl font-bold">$22</span>
+                <span class="text-[var(--accent)] text-2xl font-bold">$16</span>
+                <span class="text-[var(--muted)] text-xs">& up</span>
               </div>
               <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Tender beef chunks slow-simmered in a rich Jamaican-style stew with carrots, potatoes, and herbs.</p>
               <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
@@ -590,6 +596,35 @@
                   <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
                   <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
                   <div class="w-2 h-2 rounded-full bg-gray-600"></div>
+                  <div class="w-2 h-2 rounded-full bg-gray-600"></div>
+                </div>
+                <button class="text-xs tracking-widest text-[var(--accent)] hover:text-white transition-colors border-b border-[var(--accent)]">ADD TO ORDER</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 7 - SALMON -->
+        <div class="tilt-card reveal group" data-tilt style="transition-delay: 0.6s">
+          <div class="bg-[var(--card)] border border-[var(--border)] overflow-hidden h-full flex flex-col">
+            <div class="h-64 overflow-hidden relative">
+              <img src="https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+                   class="w-full h-full object-cover img-filter">
+              <span class="absolute top-4 right-4 bg-white text-black text-xs font-bold px-3 py-1">HEALTHY</span>
+            </div>
+            <div class="p-8 flex flex-col flex-grow border-t border-[var(--border)]">
+              <div class="flex justify-between items-start mb-4">
+                <h3 class="font-display text-3xl text-white">JERK SALMON</h3>
+                <span class="text-[var(--accent)] text-2xl font-bold">$25</span>
+                <span class="text-[var(--muted)] text-xs">& up</span>
+              </div>
+              <p class="text-[var(--muted)] text-sm mb-6 flex-grow">Fresh Atlantic salmon fillet seasoned with jerk spices and grilled to flaky perfection.</p>
+              <div class="flex justify-between items-center mt-auto border-t border-[var(--border)] pt-6">
+                <div class="flex gap-1">
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
+                  <div class="w-2 h-2 rounded-full bg-[var(--accent)]"></div>
                   <div class="w-2 h-2 rounded-full bg-gray-600"></div>
                 </div>
                 <button class="text-xs tracking-widest text-[var(--accent)] hover:text-white transition-colors border-b border-[var(--accent)]">ADD TO ORDER</button>
