--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
        <!-- Right Menu -->
        <div class="hidden md:flex items-center gap-4">
          <a href="#location" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">LOCATION</a>
-         <a href="#careers" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">CAREERS</a>
-         <a href="#franchise" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">FRANCHISE</a>
-         <a href="#contact" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">CONTACT</a>
+         <a href="careers.html" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">CAREERS</a>
+         <a href="franchise.html" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">FRANCHISE</a>
+         <a href="contact.html" class="text-white text-sm tracking-widest hover:text-[var(--accent)] transition-colors glitch-hover">CONTACT</a>
        </div>
        
        <!-- Mobile Menu Button -->
