--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 100%;
-      height: 100%;
-      min-width: 100vw;
+      width: 100vw;
+      height: 56.25vw;
       min-height: 100vh;
+      min-width: 177.78vh;
       border: none;
     }
 
