--- a/index.html
+++ b/index.html
@@ -669,8 +669,8 @@
     <div class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')] bg-cover bg-center opacity-10"></div>
     <div class="relative z-10 max-w-4xl mx-auto px-6 text-center">
       <span class="text-[var(--accent)] font-mono text-sm tracking-widest mb-4 block reveal">03 // FIND US</span>
-      <h2 class="font-display text-6xl md:text-8xl tracking-wide mb-8 text-white reveal">742 BOB<br/>MARLEY BLVD</h2>
-      <p class="text-gray-300 text-xl mb-12 reveal">Kingston, Jamaica<br/>Mon-Sat: 11am - 12am</p>
+      <h2 class="font-display text-6xl md:text-8xl tracking-wide mb-8 text-white reveal">85 MAY ST</h2>
+      <p class="text-gray-300 text-xl mb-12 reveal">Irvington, NJ<br/>Mon-Sat: 11am - 12am</p>
       <button class="btn-outline text-lg reveal">GET DIRECTIONS</button>
     </div>
   </section>
