--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
     <div class="relative z-10 max-w-4xl mx-auto px-6 text-center">
       <span class="text-[var(--accent)] font-mono text-sm tracking-widest mb-4 block reveal">03 // FIND US</span>
       <h2 class="font-display text-6xl md:text-8xl tracking-wide mb-8 text-white reveal">85 MAY ST</h2>
-      <p class="text-gray-300 text-xl mb-12 reveal">Irvington, NJ<br/>Mon-Sat: 11am - 12am</p>
+      <p class="text-gray-300 text-xl mb-12 reveal">Irvington, NJ<br/>Mon-Sun: 11:30am - 9pm</p>
       <button class="btn-outline text-lg reveal">GET DIRECTIONS</button>
     </div>
   </section>
